AssignmtDataLoader1/src/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Department_ID__c</fullName>
        <displayFormat>DEP-{000000}</displayFormat>
        <label>Department ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discription__c</fullName>
        <label>Discription</label>
        <type>TextArea</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Pune_Team_Department</fullName>
        <filterScope>Queue</filterScope>
        <label>Pune Team</label>
        <queue>Pune_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>